# SAFE-Agent

./: .gitignore  README.md  package-lock.json
backend/skillpecker/: README.md  main.py  pyproject.toml  scan_config.toml
backend/skillpecker/malicious-skill-library/: skill_classification_table.xlsx
backend/skillpecker/malicious-skill-library/Unknown__1st-commandment_Snail3D/: _meta.json  judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__Auto-Updater_zaycv/: judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__ClawMail_claw-mail/: _meta.json  judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__Clawbrain_clawcolab/: judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__Database_0xterrybit/: judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__DeepThink_addisonhellum/: SKILL.md  _meta.json  judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__Dianping-query_guogang1024/: judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__Excel_moonshine-100rze/: judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__Google_moonshine-100rze/: _meta.json  judge.raw.json  scan-result.raw.json
backend/skillpecker/malicious-skill-library/Unknown__JDiazOfficial_JDiazOfficial/: _meta.json  judge.raw.json  scan-result.raw.json
backend/skillpecker/scripts/: import_skill_classification_results.py
backend/skillpecker/skill_scan/: __init__.py  agents.py  batch.py  cli.py  config.py  detectors.py  llm.py  logging_utils.py  models.py  orchestrator.py  output_views.py  preprocess.py  prompts.py  webapp.py
backend/skillpecker/skills/: README.md
backend/skillpecker/tests/: test_runtime_llm_config.py
(+3875 files in other folders)
