[project]
name = "playwright-cli"
version = "1.0.0"
description = "Playwright browser automation CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
pw = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
